# pfe_carte

./: CMakeLists.txt  README  README.md
carteDir/: sendMsg-n.c  synchroCarte-n.c
include/: bt_p.h  client.h  liste.h
main/: CMakeLists.txt  main_client.c  recvMsg.c  sendMsg.c  synchroCarte.c  synchroServeur.c
src/: .bt_p.c.swp  CMakeLists.txt  bt_p.c  client.c  liste.c
